--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 
-<img class="lazy" data-src="https://cdn2.hubspot.net/hubfs/145335/Cute-Puppy.jpg" alt="Cute-Puppy" style="width:500px;height:333px;">
+<img class="lazy" data-src="https://www.google.com/search?q=error+picture&client=firefox-b-d&sxsrf=ALeKk01ZIMzr9disB4Mzc_LR4ljjDe5XJQ:1602895961591&tbm=isch&source=iu&ictx=1&fir=fDTykFDpTOuTpM%252CyuRNy8blNcx1BM%252C_&vet=1&usg=AI4_-kSDixoE3Q-jDwp-EMVDSsVMcJPO1w&sa=X&ved=2ahUKEwiV6JvjtLrsAhWLyIUKHcN2D-oQ9QF6BAgKEDY#imgrc=fDTykFDpTOuTpM" alt="Cute-Puppy" style="width:500px;height:333px;">
 
 
 
