--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html>
 <html>
-
-
-<img class="lazy" data-src="https://www.google.com/search?q=error+picture&client=firefox-b-d&sxsrf=ALeKk01ZIMzr9disB4Mzc_LR4ljjDe5XJQ:1602895961591&tbm=isch&source=iu&ictx=1&fir=fDTykFDpTOuTpM%252CyuRNy8blNcx1BM%252C_&vet=1&usg=AI4_-kSDixoE3Q-jDwp-EMVDSsVMcJPO1w&sa=X&ved=2ahUKEwiV6JvjtLrsAhWLyIUKHcN2D-oQ9QF6BAgKEDY#imgrc=fDTykFDpTOuTpM" alt="Cute-Puppy" style="width:500px;height:333px;">
-
-
-
-
+<head>
+<!-- HTML Codes by Quackit.com -->
+<title>
+</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {background-color:#6126d9;background-repeat:no-repeat;background-position:top left;background-attachment:scroll;}
+h4{font-family:Verdana, sans-serif;color:#000000;background-color:#ffffff;}
+p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+</style>
+</head>
+<body>
+<h4>We are currently upgrading our website,kindly visit this site in few minutes time.</h4>
+<p></p>
+</body>
 </html>
